--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="src/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
+    
     <script src="src/classes/SoundClip.js"></script>
     <script src="src/classes/BlossomMouth.js"></script>
     <script src="src/classes/Petal.js"></script>
