--- a/create.html
+++ b/create.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Daily Daisy ♥️ Create Date</title>
     <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,9 @@
         <!-- label for date picker -->
         <label for="date" >Date♥️</label><br>
         <!-- date picker -->
-            <input oninput="onCreateLink()" type="date" name="date" id="date"><br>
+        <!-- allow only dates in the future -->
+        <input  oninput="onCreateLink()" type="date" name="date" id="date"><br>
+
         <!-- label for title input -->
         <br>
         <br>
