--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
-    
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="src/classes/SoundClip.js"></script>
     <script src="src/classes/BlossomMouth.js"></script>
     <script src="src/classes/Petal.js"></script>
@@ -17,6 +17,21 @@
 </head>
 <body>
     <h1><span id="days"></span></h1>
+
+        <div id="sun" class="sun" style="display: none">
+            <div class="ray_box">
+                <div class="ray ray1"></div>
+                <div class="ray ray2"></div>
+                <div class="ray ray3"></div>
+                <div class="ray ray4"></div>
+                <div class="ray ray5"></div>
+                <div class="ray ray6"></div>
+                <div class="ray ray7"></div>
+                <div class="ray ray8"></div>
+                <div class="ray ray9"></div>
+                <div class="ray ray10"></div>
+            </div>
+        </div>
 
     <h1><span id="till"></span></h1>
     <script deferred src="src/main.js"></script>
