--- a/create.html
+++ b/create.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
-    
+    <!-- favicon -->
+    <link rel="icon" href="assets/favicon.png" type="image/png">
 </head>
 <body>
     <div id="create-container">
