--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="src/classes/Petal.js"></script>
     <script src="src/classes/Blossom.js"></script>
     <script src="src/classes/Game.js"></script>
+    <link rel="icon" href="assets/favicon.png" type="image/png">
 </head>
 <body>
     <h1><span id="days"></span></h1>
