--- a/create.html
+++ b/create.html
@@ -15,7 +15,7 @@
     <div id="create-container">
         <div>
         <!-- label for date picker -->
-        <label for="date" >Date♥️</label><br>
+        <label for="date" >Date</label><br>
         <!-- date picker -->
         <!-- allow only dates in the future -->
         <input  oninput="onCreateLink()" type="date" name="date" id="date"><br>
